--- a/MovieService/appsettings.json
+++ b/MovieService/appsettings.json
@@ -5,8 +5,25 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Error"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../logs/webapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
+        }
+      }
+    ]
+  },
   "ConnectionStrings": {
-    "sqlconnection": "Data Source=IN3TADW03036YLV;Initial Catalog=MovieSerivceDb;User ID=sa;Password=user@123;"
+    "sqlconnection": "Data Source=IN3TADW03036YLV;Initial Catalog=MovieSerivceDb1;User ID=sa;Password=user@123;",
+    "postgresqlconnection": "Host=localhost; Database=moviedb; Username=postgres; Password=user"
   },
   "AllowedHosts": "*"
 }
